welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:20: error: type mismatch;
 found   : Int(0)
 required: Boolean
return 0
       ^